--- a/pom.xml
+++ b/pom.xml
@@ -36,18 +36,6 @@
             <id>citizens-repo</id>
             <url>https://maven.citizensnpcs.co/repo</url>
         </repository>
-        
-        <!-- JitPack for SuperiorSkyblock2 -->
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-
-        <!-- CodeMC for Slime World Manager -->
-        <repository>
-            <id>codemc-repo</id>
-            <url>https://repo.codemc.io/repository/maven-public/</url>
-        </repository>
     </repositories>
 
     <dependencies>
@@ -59,12 +47,13 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- SuperiorSkyblock2 API -->
+        <!-- SuperiorSkyblock2 - Local Dependency -->
         <dependency>
-            <groupId>com.github.BG-Software-LLC</groupId>
-            <artifactId>SuperiorSkyblockAPI</artifactId>
-            <version>2023.3</version>
-            <scope>provided</scope>
+            <groupId>com.bgsoftware</groupId>
+            <artifactId>SuperiorSkyblock2</artifactId>
+            <version>2025.2.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/SuperiorSkyblock2-2025.2.1-b742.jar</systemPath>
         </dependency>
 
         <!-- Citizens API -->
@@ -76,16 +65,14 @@
             <type>jar</type>
         </dependency>
 
-        <!-- Slime World Manager API -->
+        <!-- FancyDialogs - Local Dependency -->
         <dependency>
-            <groupId>com.grinderwolf</groupId>
-            <artifactId>slimeworldmanager-api</artifactId>
-            <version>2.9.0</version>
-            <scope>provided</scope>
+            <groupId>com.fancyinnovations</groupId>
+            <artifactId>FancyDialogs</artifactId>
+            <version>0.0.32</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/FancyDialogs-0.0.32.jar</systemPath>
         </dependency>
-
-        <!-- FancyDialogs - 需要手动添加到本地仓库或使用本地jar -->
-        <!-- 注意: FancyDialogs可能需要从本地文件系统添加 -->
     </dependencies>
 
     <build>
