--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <id>citizens-repo</id>
             <url>https://maven.citizensnpcs.co/repo</url>
         </repository>
+        
+        <!-- InfernalSuite SNAPSHOT Repository -->
+        <repository>
+            <id>is-snapshots</id>
+            <url>https://repo.infernalsuite.com/repository/maven-snapshots/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -63,6 +69,14 @@
             <version>2.0.35-SNAPSHOT</version>
             <scope>provided</scope>
             <type>jar</type>
+        </dependency>
+
+        <!-- AdvancedSlimePaper API -->
+        <dependency>
+            <groupId>com.infernalsuite.asp</groupId>
+            <artifactId>api</artifactId>
+            <version>4.0.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- FancyDialogs - Local Dependency -->
